force-app/main/default/objects/Associate__c/Associate__c.object-meta.xml
<CustomObject>
    <description>Not in use, no data</description>
    <label>EU-Kontakt-Ansprechspartner</label>
    <nameField>
        <displayFormat>AP-{000000000}</displayFormat>
        <label>Kontakt-AutoNr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kontakt-Ansprechspartner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>