force-app/main/default/objects/Associate__c/fields/External_Associate_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Associate_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External_Associate_ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>