force-app/main/default/objects/Associate__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Rolle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales-Manager</fullName>
            </value>
            <value>
                <fullName>Operations-Manager</fullName>
            </value>
            <value>
                <fullName>Marketing-Manager</fullName>
            </value>
            <value>
                <fullName>Sekretärin / Assistentin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>