force-app/main/default/objects/Associate__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benutzer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N20000000sGYQEA2</relationshipName>
    <type>Lookup</type>
</CustomField>