force-app/main/default/objects/Associate__c/listViews/Alle.listView-meta.xml
<ListView>
    <fullName>Alle</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>